; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_class.c_class_put.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_class.c_class_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.class = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.class*)* @class_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @class_put(%struct.class* %0) #0 {
  %2 = alloca %struct.class*, align 8
  store %struct.class* %0, %struct.class** %2, align 8
  %3 = load %struct.class*, %struct.class** %2, align 8
  %4 = icmp ne %struct.class* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load %struct.class*, %struct.class** %2, align 8
  %7 = getelementptr inbounds %struct.class, %struct.class* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @kset_put(i32* %9)
  br label %11

11:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @kset_put(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
